# JSD-Tim1

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt  runtests.sh  setup.cfg  setup.py
example/: uksExample.fs  userExample.fs
example/example_output/generated_react/: package-lock.json  package.json
fullstack/generator/: filters.py
fullstack/generator/angular/: __init__.py
fullstack/generator/angular/template/: app.component.ts.jinja
fullstack/generator/angular/template/angular_structure/: README.md.jinja  angular.json.jinja  package-lock.json.jinja  package.json.jinja
fullstack/generator/angular/template/angular_structure/src/: index.html.jinja  styles.scss
fullstack/generator/angular/template/component_files/__entity_name_dash__/: __entity_name_dash__.service.ts.jinja
fullstack/generator/angular/template/component_files/__entity_name_dash__-page/: __entity_name_dash__-page.component.html.jinja  __entity_name_dash__-page.component.ts.jinja
fullstack/generator/react/: __init__.py
fullstack/generator/react/template/component_files/: __entity_name_dash__Service.js.jinja
fullstack/generator/react/template/component_files/__entity_name_dash__List/: __entity_name_dash__List.tsx.jinja
fullstack/generator/react/template/react_structure/: package-lock.json.jinja  package.json.jinja
fullstack/generator/react/template/react_structure/public/: styles.scss
fullstack/generator/react/template/react_structure/src/: AppRoutes.tsx.jinja
fullstack/generator/springboot/: __init__.py
fullstack/generator/springboot/template/: __app_name__Application.java.jinja
fullstack/generator/springboot/template/auth_files/config/: SecurityConfig.java.jinja  TokenProvider.java.jinja
fullstack/generator/springboot/template/auth_files/controller/: AuthController.java  AuthController.java.jinja
fullstack/generator/springboot/template/auth_files/exception/: InvalidAccessTokenException.java.jinja
fullstack/generator/springboot/template/auth_files/service/: AuthService.java  AuthService.java.jinja
fullstack/generator/springboot/template/config_files/config/: ControllerAdvisor.java.jinja
fullstack/generator/springboot/template/main_file/: __app_name_cap__Application.java.jinja
fullstack/generator/springboot/template/model/: __entity_name__.java.jinja
fullstack/generator/springboot/util/: file_util.py
fullstack/generator/util/: file_util.py  filters.py  string_format_util.py
fullstack/language/: __init__.py  builtins.py  custom_model.py  fullstack.tx  processors.py
vscode_extension/fullstack/: package.json  vsc-extension-quickstart.md
vscode_extension/fullstack/syntaxes/: fullstack.tmLanguage.json
(+67 files in other folders)
