[metadata]
name = JSD-Tim1
author = tim1
author_email = komad.katarina@gmail.com
license = MIT
description = Generating SpringBoot and Angular classes for CRUD operations based on given entity and request path model
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
    textX-jinja
include_package_data = True
package_dir =
    fullstack = fullstack

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    fullstack = language/*.tx
    fullstack.generator.springboot = template/**/*, template/**/.*, template/**/**/*, template/**/**/**/*, template/**/**/**/**/*, template/**/**/**/**/**/*, template/**/**/**/**/**/**/*, template/**/**/**/**/**/**/**/*, template/**/**/**/**/**/**/**/**/*, template/__project__/.mvn/wrapper/*, template/**/**/**/**/*
    fullstack.generator.angular = template/*, template/**/*, template/**/.*, template/**/**/*, template/**/**/.*, template/**/**/.**/*, template/**/**/**/*, template/**/**/**/.*, template/**/**/**/.**/*, template/**/**/**/.**/**/*, template/**/**/**/.**/**/**/*, template/**/**/**/**/*, template/**/**/**/**/.*, template/**/**/**/**/.**/*, template/**/**/**/**/**/*, template/**/**/**/**/**/.*, template/**/**/**/**/**/**/*, template/**/**/**/**/**/**/.*, template/**/**/**/**/**/*, template/**/**/**/**/**/.*, template/**/**/**/**/**/**/*, template/**/**/**/**/**/**/.*


[options.entry_points]
textx_languages =
    fullstack = fullstack.language:fullstack_language
textx_generators =
    springboot = fullstack.generator.springboot:fullstack_generate_springboot
    angular = fullstack.generator.angular:fullstack_generate_angular

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90